2006-12-02  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-version.h.in: Fix a stupid logic
	error in the CHECK_VERSION macro.

2006-11-30  Matthew Allum  <mallum@openedhand.com>

	* clutter.doap:
	Updates

2006-11-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.h:
	* clutter/clutter-stage.c:
	(clutter_stage_swap_buffers): Remove, as the same is done
	via clutter_redraw() and clutter_actor_queue_redraw().

	(clutter_stage_unrealize), (clutter_stage_init),
	(clutter_stage_set_xwindow_foreign): Do not call
	XDestroyWindow() on the stage Window if we are using a
	foreign Window, as we don't control its lifetime.

2006-11-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.am: Remove the gtk directory from the SUBDIRS.

	* clutter/clutter-stage.h:
	* clutter/clutter-stage.c: Add clutter_stage_swap_buffers(),
	which swaps the GL buffers.  This fixes the redraw in the
	GTK widget.

2006-11-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.c:
	(clutter_stage_set_xwindow_foreign): Add checks;
	remove an indirection to the private data.

2006-11-29  Emmanuele Bassi  <ebassi@openedhand.com>

	* gtk/*
	* configure.ac:
	* Makfile.am: Remove the GTK+ widget from the
	main tree; now Clutter depends just on GLib,
	XLibs, GdkPixbuf and OpenGL.

2006-11-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-stage.c: (clutter_stage_realize):
	Set colormap on stage window - should fix issues
	with indirect rendering.

2006-11-23  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-debug.h:
	Fix small macro typo.

2006-11-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-alpha.c:
	* clutter/clutter-behaviour-opacity.c:
	* clutter/clutter-behaviour-scale.c:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-feature.c:
	* clutter/clutter-label.c:
	* clutter/clutter-main.c:
	* clutter/clutter-stage.c:
	* clutter/clutter-texture.c
	* clutter/clutter-timeline.c: